@@ -29,12 +29,12 @@ Jenny::Installer.new_from_gem('jerbil') do |jenny|
   
   # make the required directories, if they do not already exist
   jenny.empty_directory('/etc/jermine')
-  jenny.empty_directory('/var/log/jermine', :chown=>'jermine', :chgrp=>'jermine')
-  jenny.empty_directory('/var/run/jermine', :chown=>'jermine', :chgrp=>'jermine')
+  jenny.empty_directory('/var/log/jermine', :chown=>'jermine', :chgrp=>'jermine', :chmod=>0775)
+  jenny.empty_directory('/var/run/jermine', :chown=>'jermine', :chgrp=>'jermine', :chmod=>0775)
   
   
-  jenny.file('etc/jermine/jerbil-test.rb', '/etc/jermine/jerbil-test.rb', :chown=>'jermine', :chgrp=>'jermine', :chmod=>0660)
-  jenny.message(:install, "Create a secret with jerbil server secret", :warning)
+  jenny.file('etc/jermine/jerbil.rb', '/etc/jermine/jerbil.rb', :chown=>'jermine', :chgrp=>'jermine', :chmod=>0640)
+  jenny.file('etc/jermine/jerbil-client.rb', '/etc/jermine/jerbil-client.rb', :chown=>'jermine', :chgrp=>'jermine', :chmod=>0640)
   
   # configuration file to run the service
   jenny.file('etc/conf.d/jerbild', '/etc/conf.d/jerbild')
@@ -46,6 +46,7 @@ Jenny::Installer.new_from_gem('jerbil') do |jenny|
   # the daemon itself, which is executable
   jenny.wrapper('sbin/jerbild', '/usr/sbin/jerbild')
   jenny.wrapper('sbin/jerbil-stop', '/usr/sbin/jerbil-stop')
+  jenny.wrapper('sbin/jerbil-status', '/usr/sbin/jerbil-status')
   jenny.wrapper('sbin/jserviced', '/usr/sbin/jserviced')
   jenny.wrapper('sbin/jservice-stop', '/usr/sbin/jservice-stop')
   jenny.wrapper('sbin/jservice-status', '/usr/sbin/jservice-status')
