@@ -1,0 +1,2 @@
+# a simple client config file for jerbil
+environment :prod
