@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
-# 23-Jul-2012
-#     minor tweaks to config files for installation
+# 24-Jul-2012
+#     another release candidate with tweaks to sbin scripts.
 
 module Jerbil
-  # version set to 0.99.06
-  Version = '0.99.06'
-  # date set to 23-Jul-2012
-  Version_Date = '23-Jul-2012'
-  #ident string set to: jerbil-0.99.06 23-Jul-2012
-  Ident = 'jerbil-0.99.06 23-Jul-2012'
+  # version set to 0.99.07
+  Version = '0.99.07'
+  # date set to 24-Jul-2012
+  Version_Date = '24-Jul-2012'
+  #ident string set to: jerbil-0.99.07 24-Jul-2012
+  Ident = 'jerbil-0.99.07 24-Jul-2012'
 end
