@@ -1,5 +1,9 @@
 ==History
 
+[jerbil-0.99.07 24-Jul-2012]
+
+  another release candidate with tweaks to sbin scripts.
+
 [jerbil-0.99.06 23-Jul-2012]
 
   minor tweaks to config files for installation
